Fix for chrome alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,7 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
     font-family: FontAwesome;
     font-size: 86px;
     opacity: 0.7;
